[package]
authors = ["The Tremor Team"]
description = "Tremor Script Interpreter"
documentation = "https://docs.rs/tremor-script"
edition = "2021"
license = "Apache-2.0"
name = "tremor-value"
readme = "README.md"
repository = "https://github.com/tremor-rs/tremor-runtime"
version = "0.3.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
beef = "0.5"
halfbrown = { version = "0.1", features = ["fxhash"] }
serde = "1.0"
simd-json = "0.4.13"
# FIXME: change version after it's upstreamed
simd-json-derive = "0.2.3-alpha.0"
value-trait = { version="0.2.9", features=["custom-types", "c-abi"] }

[dev-dependencies]
float-cmp = "0.9"
getopts = "0.2"
proptest = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
128bit = []
