[package]
name = "metronome"
version = "0.1.0"
edition = "2018"

[lib]
# This way, the shared object will be saved with an unique name, such as
# `libconnector_metronome.so`.
name = "connector_metronome"
# This is required so that the library is compiled as a shared library. See:
#
# * https://doc.rust-lang.org/cargo/reference/cargo-targets.html#the-crate-type-field
# * https://doc.rust-lang.org/reference/linkage.html
crate-type = ["cdylib"]

[dependencies]
abi_stable = { version = "0.10", default-features = false }
tremor-runtime = { version = "0.11.4", path = "../../../" }

[patch.crates-io]
# FIXME: update to crates.io when this is added to a new version:
# https://github.com/rodrimati1992/abi_stable_crates/pull/68
abi_stable = { git = "https://github.com/rodrimati1992/abi_stable_crates.git" }
