[package]
name = "metronome"
version = "0.1.0"
edition = "2018"

[lib]
# This way, the shared object will be saved with an unique name, such as
# `libconnector_metronome.so`.
name = "connector_metronome"
# This is required so that the library is compiled as a shared library. See:
#
# * https://doc.rust-lang.org/cargo/reference/cargo-targets.html#the-crate-type-field
# * https://doc.rust-lang.org/reference/linkage.html
crate-type = ["cdylib"]

[dependencies]
# FIXME: plugins should be able to depend on `tremor-pdk` only after everything
# is moved around and cleaned up
tremor-pdk = { version = "0.1.0", path = "../../../tremor-pdk" }
tremor-script = { version = "0.11.4", path = "../../../tremor-script" }
tremor-pipeline = { version = "0.11.4", path = "../../../tremor-pipeline" }
tremor-common = { version = "0.11.4", path = "../../../tremor-common" }
tremor-runtime = { version = "0.11.4", path = "../../../" }

abi_stable = { version = "0.10", default-features = false }
# FIXME: clean up after https://github.com/oxalica/async-ffi/pull/10 is merged
async-ffi = { version = "0.3", features = ["sabi"], git = "https://github.com/marioortizmanero/async-ffi.git", branch = "sabi" }

[patch.crates-io]
# FIXME: update to crates.io when this is added to a new version:
# https://github.com/rodrimati1992/abi_stable_crates/pull/68
abi_stable = { git = "https://github.com/rodrimati1992/abi_stable_crates.git" }
